k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zako
  namespace: zako
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: zako.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: monolith
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
